  updates whole index while --update looking for patches first)

* packages are divided into groups before install and each group 
  is installed separately; this ensures that broken dependencies in 
  one of group doesn't affect the rest. 

* improved dependecy processing:
  - package may be marked for install as a consequence of conflict

  - dependency loops detected during installl time are noticed in human 
    readable form

  - improved "greedy" selection - if foo-VER is upgraded, then eventual 
    "greedy" marks will mark foo-{devel,static,etc} in version VER too.

* added simple ftp client; it is used for FTP downloads by
  default

* shell: 
  - db package list is cached what speeds up program start
  - ls: long listings are passed to $PAGER program (default is "less")
  - ls: new switches: -n (list package name only), -G (list group)
        and -O (show package summaries)

* added log file suppport (--log option)

* sources may be configured as name and URL pair; and be later 
  selected using that name (new --sn|-n option). 
  With --sl|-l program lists all configured sources.
  
* packages.dir's integrity is verified before each loading
  what prevents program SIGSEVs on load broken indexes

* changed default cache directory to $HOME/.poldek-cache

* few (nice) improvements and (not so nice) bug fixes 


0.16 (stable release):
* fixed removable media support in non-install-dist modes
* shell: uninstall: fix: don't remove pkg from install list if removal fails

0.15.9:
* shell:
   - desc: added package file size display
   - search: added Group search
   - install: unhidden --mercy
   - uninstall: fix: don't remove pkg from install list if --test is used
   - added -h opt. to all commands
* removed GCC's nested functions usage -- seems that it causes SIGSEVs on
   some machines (Arkadiusz Patyk <areq@pld.org.pl>)
* fix: don't include trailing whitespaces in config values

0.15.8:
* curl: disabled timeouts, cURL's timeout it's a time to transfer file 