@@ -2,15 +2,28 @@
 #ifndef POLDEK_RPM_ADDS_H
 #define POLDEK_RPM_ADDS_H
 
-#include <stdint.h>
+#ifdef HAVE_CONFIG_H
+# include "config.h"
+#endif
 
+
+#include <stdint.h>
 #include <rpm/rpmlib.h>
 
-/* rpmlib prototype */
-int	rpmvercmp(const char * one, const char * two);
-  
-void rpm_headerEntryFree(void *e, int type);
+#ifdef HAVE_RPM_4_0_4           /* missing prototypes in public headers */
+int headerGetRawEntry(Header h, int_32 tag,
+                      /*@null@*/ /*@out@*/ hTYP_t type,
+                      /*@null@*/ /*@out@*/ hPTR_t * p, 
+                      /*@null@*/ /*@out@*/ hCNT_t c);
+char ** headerGetLangs(Header h);
+#endif
 
+/* rpmlib prototype */
+int rpmvercmp(const char * one, const char * two);
+
+
+
+void rpm_headerEntryFree(void *e, int type);
 
 /* calculates size of RPM_STRING_ARRAY_TYPE entry */
 int rpm_headerRSATSize(void *e, int count, int type);
@@ -34,6 +47,5 @@ int rpmhdr_nevr(Header h, char **name,
                 uint32_t **epoch, char **version, char **release);
 
 char *rpmhdr_snprintf(char *buf, size_t size, Header h);
-
 
 #endif /* RPM_ADDS_H */
